--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -559,18 +559,17 @@ box-shadow: 0 10px 10px rgba(201,201,206,.5);min-height:3.72rem;background: #fff
 .h-user{padding-top:1.13rem;text-align: center;}
 .h-user h3{line-height: 0.92rem;font-weight: bold;}
 .u-s-name{color:#7a7d82;font-size:.28rem;line-height: .3rem;}
-.u-btn{font-size:0;margin-top:.2rem;}
+/*.u-btn{font-size:0;margin-top:.2rem;}
 .u-btn div{width:50%;display: inline-block;text-align: right;}
 .u-btn div.rbtn{text-align: left;}
 .u-btn a{display: inline-block;width:2.42rem;height:.73rem;line-height: .73rem;border-radius: .4rem;text-align: center;}
-.u-btn .focusbtn{margin-right:.15rem;-webkit-box-shadow: 0 .04rem .12rem rgba(255,75,112,.5);box-shadow: 0 .04rem .12rem rgba(255,75,112,.5);background:linear-gradient(top,#ff567b,#ff4b70);background:-webkit-linear-gradient(top,#ff567b,#ff4b70);color:#fff;}
-.u-btn .cardbtn{margin-left:.15rem;}
-.u-btn .focusgray{background:#7a7d82;-webkit-box-shadow: 0 .04rem .12rem rgba(255,75,112,.5);box-shadow: 0 .04rem .12rem rgba(122,125,130,.5);}
+.u-btn .focusbtn{margin-right:.15rem;-webkit-box-shadow: 0 .04rem .12rem rgba(255,75,112,.5);box-shadow: 0 .04rem .12rem rgba(255,75,112,.5);background:linear-gradient(top,#ff567b,#ff4b70);background:-webkit-linear-gradient(top,#ff567b,#ff4b70);color:#fff;}*/
+
 .mobile-number span{margin-right:.2rem;line-height: .8rem;color:#171717;font-size:.28rem;}
 .mobile-number .m-email i{font-size:.28rem;color:#ff7e53;margin-right: .1rem;}
 .mobile-number .m-phone i{color:#ff5579;font-size:.28rem;vertical-align: 1px;margin-right: 0;}
-.u-btn .cardbtn{color:#ff5277;border:2px #ff5277 solid;box-sizing: border-box;}
-.u-btn .cardgray{color:#7a7d82;border:2px #7a7d82 solid;}
+/*.u-btn .cardbtn{color:#ff5277;border:2px #ff5277 solid;box-sizing: border-box;}*/
+
 .basicinfo{overflow:hidden;margin-top:.36rem;}
 /*专家主页 约见入口*/
 .e-info{position:relative;}
@@ -719,6 +718,9 @@ border-radius: 50%;}
 .m_right_btn span{width:1.5rem;display:block;text-align:center;color:#fff;border-radius: .5rem;box-shadow: 0 .01rem .02rem rgba(255,75,112,.5);height:.6rem;}
 .m_right_btn .r-focus{line-height:.52rem;background: linear-gradient(top,#ff567b,#ff4b70);background: -webkit-linear-gradient(top,#ff567b,#ff4b70);border:.04rem #fff solid;margin-bottom:.15rem;}
 .m_right_btn .g-card{border:.02rem #ff6283 solid; color:#ff6283;line-height:.54rem;}
+.m_right_btn .cardgray,.m_right_btn .focusgray{color:#7a7d82;border-color: #7a7d82;-webkit-box-shadow: 0 1px 1px rgba(255,75,112,.5);box-shadow: 0 1px 1px rgba(122,125,130,.5);}
+.m_right_btn .cardgray{color:#7a7d82;}
+.m_right_btn .focusgray{background:#7a7d82;color:#fff;}
 .m-listinfo-des{position: relative;border-top:1px #e5e5e5 solid;}
 .m-listinfo-des li{float:left;height:1.48rem;text-align: center;overflow:hidden;padding-top:.37rem;
 border-left:1px #e5e5e5 solid;}
