--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -306,10 +306,11 @@ border-bottom:none;top:-1px;margin-top:-1px;margin-left:-1px;}
 .fixed-btn .r-btn{background: #e01a48;border-left: 1px #fff solid;}
 .wraper .a-choose{background:#fff;}
 .a-form-box{overflow:hidden;background:#fff;border-bottom:1px #e5e5e5 solid;}
-.a-form-box li{height:0.52rem;margin:0.26rem;/*display: flex; */justify-content: space-between;}
-.a-form-box li input,.a-form-box li textarea{flex:3;border:1px #c8c7cc solid;border-radius: 0.1rem;padding:0.1rem;font-size:0.28rem;}
+.a-form-box li{height:0.52rem;margin:0.26rem;}
+.a-form-box li input,.a-form-box li textarea{border:1px #c8c7cc solid;border-radius: 0.1rem;padding:0.1rem;font-size:0.28rem;width:100%;}
+.s-form-box span{display: block;}
 .a-form-box li textarea{height:2.3rem;}
-.a-form-box li span{line-height: 0.52rem;flex:1;color:#222c38;font-size:0.28rem;}
+.a-form-box li span{line-height: 0.52rem;color:#222c38;font-size:0.28rem;}
 .a-form-box li i{line-height: 0.52rem;color:#222c38;font-size:0.28rem;display:block;}
 .a-form-box li:last-child{flex-direction:column;height:auto;}
 .a-shadow{width:100%;background: #fff;padding:0.65rem 0;overflow: hidden;max-width: 750px;border-radius: .1rem .1rem 0 0;}
