--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -58,7 +58,7 @@ outline:none;height:0.8rem;line-height: 0.78rem;}
 /*.orgmark a:nth-of-type(4n){margin-right:0;}*/
 .nextstep,.s-btn{ display:block;text-align:center;height:0.78rem;width:80%;font-size:0.3rem;line-height:0.78rem;background: #e01a48;color:#fff;margin:0 auto;margin-top:0.4rem;margin-bottom:0.4rem;border-radius:0.2rem;}
 .f-bottom{position: fixed;width: 100%;height: 1rem;bottom: 0;border-radius: 0;color: #fff;
-    font-size: 0.32rem;text-align: center;line-height: 1rem;background: #e01a48;max-width: 750px;}
+    font-size: 0.32rem;text-align: center;line-height: 1rem;background: #e01b49;max-width: 750px;}
 .s-btn{margin:0.2rem auto;}
 .redshadow{box-shadow: 0 0.1rem 0.2rem rgba(224,26,72,.2);}
 .grayshadow{box-shadow: 0 0.1rem 0.2rem rgba(122,126,131,.2);}
@@ -427,9 +427,9 @@ line-height: .34rem;height:.34rem;}
 .m-to-more{position:absolute;height:4rem;/*background: url(img/tomore.png) center center no-repeat;*//*background-size: cover;*/width:100%;max-width: 750px;}
 .pic-expert{height:4rem;width:100%;overflow:hidden;}
 .pic-expert img{width:100%;height:auto;display: block;}
-.m-tomore-bottom{position:absolute;top:-0.21rem;background: rgba(255,255,255,1);color:#222c38;line-height:.41rem;height:0.42rem;-webkit-box-shadow:0 0 1px rgba(229,229,229,1);box-shadow: 0 0 1px rgba(229,229,229,1);border-radius: 0.5rem;padding:0 .1rem;text-align: center;left:50%;margin-left:-1rem;width:2rem;}
-.m-tomore-bottom span{font-size:0.24rem;color:#222c38;}
-.m-tomore-bottom span i{margin-right:0.12rem;font-size:0.24rem;color:#535353;}
+.m-tomore-bottom{position:absolute;top:-0.21rem;background: rgba(255,255,255,1);color:#222c38;line-height:.42rem;height:0.42rem;/*-webkit-box-shadow:0 0 1px rgba(229,229,229,1);box-shadow: 0 0 1px rgba(229,229,229,1);border-radius: 0.5rem;*/padding:0 .05rem;text-align: center;left:50%;margin-left:-1.1rem;width:2.2rem;}
+.m-tomore-bottom span{font-size:0.26rem;color:#222c38;}
+.m-tomore-bottom span i{margin-right:0.1rem;font-size:0.24rem;color:#535353;}
 .m-info-box{overflow:hidden;border-bottom:1px #e5e5e5 solid;border-top:1px #e5e5e5 solid; background: #fff;margin-top:4rem;margin-bottom:0.2rem;}
 .m-info-box li{padding:0.3rem 0;margin:0 0.3rem;border-bottom:1px #e5e5e5 solid;/* display: flex; justify-content: space-between;*/font-size:0.28rem;overflow:hidden;}
 .m-info-box li em{margin-left:0.2rem;font-size:0.3rem;font-weight:500;color:#808080;}
@@ -582,9 +582,9 @@ box-shadow: 0 10px 10px rgba(201,201,206,.5);min-height:3.72rem;background: #fff
 .basicinfo li span{display: block;font-size:.26rem;height: .54rem;word-break:break-all;margin-top:0.14rem;color:#171717;overflow:hidden;}
 .basicinfo li i{color:#7a7d82;font-size:.24rem;}
 .m-infotab-list{background: #fff;overflow:hidden;margin-top:.6rem;}
-.h-tab{overflow:hidden;width:100%;}
+.h-tab{overflow:hidden;width:100%;/*border-bottom:1px #e5e5e5 solid;box-sizing: content-box;*/}
 .h-tab:after{}
-.h-tab li{float:left;font-size:.28rem;color:#bcbec0;width:33.3%;text-align: center;line-height: .86rem;color:#bcbec0;}
+.h-tab li{float:left;font-size:.28rem;color:#bcbec0;width:33.3%;text-align: center;line-height: .86rem;color:#bcbec0;height:.86rem;padding-bottom:1px;}
 .h-tab li i{font-size: .26rem;margin-right: .2rem;}
 .h-tab li.active{color:#fff;background: #e01b49;}
 .tabcon{overflow: hidden;}
@@ -595,7 +595,7 @@ box-shadow: 0 10px 10px rgba(201,201,206,.5);min-height:3.72rem;background: #fff
 .tabcon ul li{/*line-height: .9rem;*/position:relative;font-size:0;padding:.3rem 0;}
 .tabcon .noafter:after{height:0;content: '';}
 .tabcon ul li:after{width:200%;height:1px;position:absolute;bottom:0;left:0;z-index:0;content:"";-webkit-transform:scale(0.5);-webkit-transform-origin:0 0;transform:scale(0.5);transform-origin:0 0;background: #e5e5e5;}
-.tabcon ul div{display:inline-block;max-width:65%;}
+.tabcon ul div{display:inline-block;max-width:70%;}
 .tabcon div em{margin-right:.1rem;font-size:.28rem;}
 .basicon .b-dq i{color:#ff7e53;font-size:.28rem;}
 .basicon .b-hy i{color:#ff8897;}
@@ -706,34 +706,34 @@ border-radius: 50%;}
 .m_center_des h3{font-weight: bold;line-height: .58rem;}
 .m_center_des span{display: block;line-height:.3rem;color:#222c38;}
 .m-subject-list{background: #fff; margin-top:.55rem;padding:0 .3rem;position:relative;}
-.m-pos-top{width:3.6rem;margin-left:-1.8rem;-webkit-box-shadow: 0 0 1px rgba(0,0,0,.5); */
-    box-shadow: 0 0 1px rgba(0,0,0,.5);}
+.m-pos-top{width:3.6rem;margin-left:-1.8rem;border:1px #e5e5e5 solid;/*-webkit-box-shadow: 0 0 1px rgba(0,0,0,.5); */
+    /*box-shadow: 0 0 1px rgba(0,0,0,.5);*/border-radius: .3rem;}
 .m-pos-top span:first-of-type{margin-right: .1rem;}
-.m-sub-header i{color:#22a69f;margin-right:.23rem;font-size:.24rem;}
-.m-sub-header h3{color:#808080;font-size:.26rem; line-height: .9rem;border-bottom:1px #e5e5e5 solid;}
+.m-sub-header i{color:#22a69f;margin-right:.15rem;font-size:.24rem;}
+.m-sub-header h3{color:#808080;font-size:.3rem; line-height: .9rem;border-bottom:1px #e5e5e5 solid;}
 .m-sub-header span{color:#e01b49;}
 .m-sub-con section{overflow:hidden;border-bottom:1px #e5e5e5 solid;padding:.1rem 0;}
 .m-sub-con-h,.m-sub-con-c{padding:.1rem 0;}
 .m-sub-con-c p{line-height: .42rem;}
-.m-sub-con-h h3{font-weight: bold;line-height:.4rem;}
+.m-sub-con-h h3{font-weight: bold;line-height:.4rem;font-size:.3rem;font-weight: 800;}
 .m_right_btn span{width:1.5rem;display:block;text-align:center;color:#fff;border-radius: .5rem;box-shadow: 0 .01rem .02rem rgba(255,75,112,.5);height:.6rem;}
-.m_right_btn .r-focus{line-height:.52rem;background: linear-gradient(top,#ff567b,#ff4b70);background: -webkit-linear-gradient(top,#ff567b,#ff4b70);border:.04rem #fff solid;margin-bottom:.15rem;}
-.m_right_btn .g-card{border:.02rem #ff6283 solid; color:#ff6283;line-height:.54rem;}
-.m_right_btn .cardgray,.m_right_btn .focusgray{color:#7a7d82;border-color: #7a7d82;-webkit-box-shadow: 0 1px 1px rgba(255,75,112,.5);box-shadow: 0 1px 1px rgba(122,125,130,.5);}
+.m_right_btn .r-focus{line-height:.6rem;background: linear-gradient(top,#ff567b,#ff4b70);background: -webkit-linear-gradient(top,#ff567b,#ff4b70);border:.04rem #fff solid;margin-bottom:.15rem;}
+.m_right_btn .g-card{border:.02rem #ff6283 solid; color:#ff6283;line-height:.6rem;}
+.m_right_btn .cardgray,.m_right_btn .focusgray{color:#7a7d82;border:1px solid #7a7d82;-webkit-box-shadow: 0 1px 1px rgba(255,75,112,.5);box-shadow: 0 1px 1px rgba(122,125,130,.5);}
 .m_right_btn .cardgray{color:#7a7d82;}
 .m_right_btn .focusgray{background:#7a7d82;color:#fff;}
 .m-listinfo-des{position: relative;border-top:1px #e5e5e5 solid;}
 .m-listinfo-des li{float:left;height:1.48rem;text-align: center;overflow:hidden;padding-top:.37rem;
-border-left:1px #e5e5e5 solid;}
-.m-lilist-des li:first-of-type{border-left: none;width:25%;}
-.m-lilist-des li:nth-of-type(2){width:30%;}
-.m-lilist-des li:last-of-type{width:45%;}
+border-left:1px #e5e5e5 solid;width:33.3%;}
+.m-lilist-des li:first-of-type{border-left: none;/*width:25%;*/}
+/*.m-lilist-des li:nth-of-type(2){width:30%;}
+.m-lilist-des li:last-of-type{width:45%;}*/
 .m-lilist-des li i{display: block;font-size:.38rem;margin-bottom:.2rem;color:#bcbec0;}
 .m-lilist-des{overflow:hidden;}
-.m-lilist-des li span{font-size:.24rem;color:#222c38;display:block;width:90%;margin:0 auto;word-break: break-all;}
+.m-lilist-des li span{font-size:.26rem;color:#222c38;display:block;width:90%;margin:0 auto;word-break: break-all;}
 .pos-top{position:absolute;z-index:99;}
 .m-commond-list{height:.96rem;overflow: hidden;}
-.m-commond-list span{color:#808080;font-size:.26rem;line-height: .96rem;}
+.m-commond-list span{color:#808080;font-size:.26rem;line-height: .96rem;text-indent:.03rem;}
 .m-commond-list span i{margin-right: .2rem;font-size: .24rem;}
 .m-commond-list .hover{color:#e01b49;}
 .m-commond-list p{padding-top:.26rem;padding-left: .6rem;}
