--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -701,7 +701,7 @@ border-radius: 50%;}
 /*个人主页3*/
 .m_top_des{padding:.4rem .3rem; overflow:hidden;font-size: .24rem;}
 .m_left-pic{width:1.34rem;height:1.34rem;border-radius: 50%;overflow:hidden;}
-.m_left-pic img{width:100%;height:auto;display: block;}
+.m_left-pic img{width:100%;height:1.34rem;display: block;}
 .m_center_des{padding-top:.1rem;margin-left:.1rem;}
 .m_center_des h3{font-weight: bold;line-height: .58rem;}
 .m_center_des span{display: block;line-height:.3rem;color:#222c38;}
