--- a/webroot/wpadmin/css/chat.css
+++ b/webroot/wpadmin/css/chat.css
@@ -19,7 +19,7 @@ and open the template in the editor.
 {
     margin-bottom: 10px;
     padding-bottom: 5px;
-    border-bottom: 1px dotted #B3A9A9;
+    /*border-bottom: 1px dotted #B3A9A9;*/
 }
 
 .chat li.left .chat-body
@@ -33,11 +33,52 @@ and open the template in the editor.
 }
 
 
-.chat li .chat-body p
+/*.chat li .chat-body p
 {
     margin: 0;
     color: #777777;
+}*/
+.chat li .chat-body p {
+    margin: 0;
+    color: #151414;
+    border-radius: 15px;
+    line-height: 30px;
+    padding: 10px 10px;
+    display: inline-block;
+    min-height: 30px;
+    position: relative;
 }
+/*.chat li .chat-body p:before{
+    border-width: 6px;
+    margin-top: -1px;
+}
+.chat li .chat-body p:before,.chat li .chat-body p:after {
+    position: absolute;
+    right: 100%;
+    top: 15px;
+    border: solid transparent 7px;
+    border-right-color: #d2d6de;
+    content: ' ';
+    height: 0;
+    width: 0;
+    pointer-events: none;
+}
+.chat li.right .chat-body p:before,.chat li.right .chat-body p:after{
+    right: auto;
+    left: 100%;
+    border-right-color: transparent;
+    border-left-color: #7bdd8c;
+}
+.chat li.left .chat-body p:before,.chat li.left .chat-body p:after{
+    border-left-color: #d5dda1;
+}*/
+.chat li.left .chat-body p{
+    background: #d5dda1;
+}
+.chat li.right .chat-body p{
+    background: #7bdd8c;
+}
+
 
 .panel .slidedown .glyphicon, .chat .glyphicon
 {
