--- a/webroot/pc/css/style.css
+++ b/webroot/pc/css/style.css
@@ -159,5 +159,5 @@ margin:0 auto;margin-top:30px;}
 .my-join i{color:#fff;margin-right: 10px;font-size:20px;vertical-align: middle;}
 .mt10 a{display: inline-block;background: #E01B49;width:126px;height:50px;color:#fff;line-height: 50px;text-align: center;font-size:16px;}
 .mt10 a:last-of-type{background: #666666;margin-left:20px;}
-.editbtn textarea{border:1px #ccc solid;}
+.editbtn textarea{border:1px #ccc solid;width:100%;height:200px;}
 
