--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -24,7 +24,7 @@ outline:none;height:0.8rem;line-height: 0.78rem;}
 .items .orgtitle .orgname{display: inline-block; background: url(img/up.png) no-repeat right center; width:100%; background-size:0.25rem 0.16rem ;/*position:relative;padding-left:.2rem;*/}
 /*.orgname:before{content: '';height:0.36rem;width:0.05rem;background: #dd1a48;position:absolute;left:0;bottom:0.2rem;}*/
 .items .orgtitle .bgorgname{background: url(img/down.png) no-repeat right center;background-size:0.25rem 0.16rem ;}
-.items{background:#fff;overflow:hidden;}
+.items{background:#fff;overflow:hidden; }
 .orgmark{padding:0 0.3rem;font-size:0;}
 .orgmark a{display: inline-block;padding:0.15rem 0.28rem;text-align:center;font-size:0.26rem;margin:0.26rem 0;color:#7a7e83; border:1px #c8c7cc solid; border-radius:3px;margin-right:0.1rem;}
 .orgmark .a-mark{padding:0.1rem 0.2rem;}
@@ -1131,3 +1131,14 @@ background:-webkit-linear-gradient(top,#54d76a 0%,#53d66a 50%,#53d569 100%);  ba
 .m-service-con{margin-top:.6rem;}
 .m_title_des{padding:.15rem .3rem;background: #fff;}
 .m_title_des h3{border-left:#e01a48 solid .04rem;padding-left:.12rem;line-height:.32rem;font-size: .3rem;}
+/*audio*/
+.video-js{background: #000;padding:.1rem;}
+.audio-js{background: #fff;}
+.loadout{ background:#666; height:40px;width:300px;border-radius: 5px;color:#fff;margin:100px;} 
+.m-audio{float:left;}
+.m-audio .on{background-size:contain;background: url(../css/img/aoff.png);}
+.m-audio .stop{background: url(../css/img/aon.png) no-repeat;background-size:contain;}
+.audio{width:30px;height:30px;margin-top:5px;margin-left:5px;} 
+.mc_title{height:40px;width:160px;margin-left:10px;float:left;overflow:hidden;}
+.mc_title h3{line-height: 40px;font-size:12px;}
+.loadout time{float:right;line-height: 40px;margin-right: 5px;color:lightgray;}
