--- a/webroot/wpadmin/css/base.css
+++ b/webroot/wpadmin/css/base.css
@@ -134,8 +134,8 @@ body{
 
 /*页标题*/
 .page-header{
-   border-bottom: 1px dotted #E2E2E2;
-   margin:10px 20px auto 20px;
+    border-bottom: 1px dotted #E2E2E2;
+    margin:10px 20px auto 20px;
 }
 
 /*主页区*/
@@ -245,78 +245,78 @@ body{
     height: 130px;
 }
 .dropzone {
-  border-radius: 0;
-  border: 1px solid rgba(0, 0, 0, 0.06);
+    border-radius: 0;
+    border: 1px solid rgba(0, 0, 0, 0.06);
 }
 .dropzone .dz-default.dz-message {
-  background-image: none;
-  font-size: 24px;
-  text-align: center;
-  line-height: 32px;
-  left: 0;
-  width: 100%;
-  margin-left: auto;
+    background-image: none;
+    font-size: 24px;
+    text-align: center;
+    line-height: 32px;
+    left: 0;
+    width: 100%;
+    margin-left: auto;
 }
 .dropzone .dz-default.dz-message span {
-  display: inline;
-  color: #555;
+    display: inline;
+    color: #555;
 }
 .dropzone .dz-default.dz-message span .upload-icon {
-  opacity: 0.7;
-  filter: alpha(opacity=70);
-  margin-top: 8px;
-  cursor: pointer;
+    opacity: 0.7;
+    filter: alpha(opacity=70);
+    margin-top: 8px;
+    cursor: pointer;
 }
 .dropzone .dz-default.dz-message span .upload-icon:hover {
-  opacity: 1;
-  filter: alpha(opacity=100);
+    opacity: 1;
+    filter: alpha(opacity=100);
 }
 .dropzone .dz-preview .dz-error-mark,
 .dropzone-previews .dz-preview .dz-error-mark,
 .dropzone .dz-preview .dz-success-mark,
 .dropzone-previews .dz-preview .dz-success-mark {
-  background-image: none;
-  background-color: rgba(255, 255, 255, 0.8);
-  border-radius: 100%;
-  text-align: center;
-  line-height: 35px;
+    background-image: none;
+    background-color: rgba(255, 255, 255, 0.8);
+    border-radius: 100%;
+    text-align: center;
+    line-height: 35px;
 }
 .dropzone .dz-preview .dz-error-mark:before,
 .dropzone-previews .dz-preview .dz-error-mark:before {
-  font-family: FontAwesome;
-  font-size: 30px;
-  color: #DB6262;
-  content: "\f00d";
+    font-family: FontAwesome;
+    font-size: 30px;
+    color: #DB6262;
+    content: "\f00d";
 }
 .dropzone .dz-preview .dz-success-mark:before,
 .dropzone-previews .dz-preview .dz-success-mark:before {
-  font-family: FontAwesome;
-  font-size: 30px;
-  color: #6DA552;
-  content: "\f00c";
+    font-family: FontAwesome;
+    font-size: 30px;
+    color: #6DA552;
+    content: "\f00c";
 }
 .dropzone a.dz-remove,
 .dropzone-previews a.dz-remove {
-  border: none;
-  border-radius: 0;
-  color: #FFF;
-  background: #D15B47;
-  cursor: pointer;
+    border: none;
+    border-radius: 0;
+    color: #FFF;
+    background: #D15B47;
+    cursor: pointer;
 }
 .dropzone a.dz-remove:hover,
 .dropzone-previews a.dz-remove:hover {
-  color: #FFF;
-  background: #B74635;
+    color: #FFF;
+    background: #B74635;
 }
 .dropzone .progress,
 .dropzone-previews .progress {
-  margin-bottom: 0;
+    margin-bottom: 0;
 }
 .dropzone .dz-preview.dz-success .progress,
 .dropzone-previews .dz-preview.dz-success .progress,
 .dropzone .dz-preview.dz-error .progress,
 .dropzone-previews .dz-preview.dz-error .progress {
-  display: none;
+    display: none;
 }
 
 .input-img{
@@ -333,6 +333,23 @@ body{
 }
 .form-inline .form-control{
     width:auto;
+}
+.inner-input{
+    height: 32px;
+    padding: 5px 8px;
+    font-size: 13px;
+    line-height: 1.53846154;
+    color: #222;
+    vertical-align: middle;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    min-width: 40rem;
 }
 
 
