--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -1134,11 +1134,11 @@ background:-webkit-linear-gradient(top,#54d76a 0%,#53d66a 50%,#53d569 100%);  ba
 /*audio*/
 .video-js{background: #000;padding:.1rem;}
 .audio-js{background: #fff;}
-.loadout{ background:#666; height:40px;width:300px;border-radius: 5px;color:#fff;margin:100px;} 
+.loadout{ background:#666; height:40px;width:300px;border-radius: 5px;color:#fff;margin:20px auto;} 
 .m-audio{float:left;}
 .m-audio .on{background-size:contain;background: url(../css/img/aoff.png);}
 .m-audio .stop{background: url(../css/img/aon.png) no-repeat;background-size:contain;}
 .audio{width:32px;height:32px;margin-top:5px;margin-left:5px;} 
-.mc_title{height:40px;width:160px;margin-left:10px;float:left;overflow:hidden;}
-.mc_title h3{line-height: 40px;font-size:12px;}
+.mc_title{height:40px;width:190px;float:left;overflow:hidden;}
+.mc_title h3{line-height: 40px;font-size:12px;margin:0;display: -webkit-box;-webkit-line-clamp: 1;-webkit-box-orient: vertical;overflow: hidden;}
 .loadout time{float:right;line-height: 40px;margin-right: 5px;color:lightgray;}
