--- a/webroot/wpadmin/lib/jqgrid/css/ui.lm.css
+++ b/webroot/wpadmin/lib/jqgrid/css/ui.lm.css
@@ -38,4 +38,5 @@
     height:22px; 
     padding: 0 2px 0 2px;border-bottom-width: 1px; 
     border-bottom-color: inherit;
-    border-bottom-style: solid;}
+    border-bottom-style: solid;
+}
