--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -768,9 +768,9 @@ border-left:1px #e5e5e5 solid;width:33.3%;}
 }
 .e-info-box li.u-img{line-height:1rem;height:auto;padding:0.1rem 0;}
 .e-info-box li.u-img .upload-user-img{height: 1rem;width: 1rem;border-radius: 0.3rem;}
-.upload-user-img .mcard{/*margin-top:.05rem;*/}
+.upload-user-img .mcard{/*margin-top:.05rem;*/line-height: .75rem;}
 .mcard img{width:0.46rem;height:auto;}
-.h-info-box li span{float:left;display: block;font-size:0.28rem;}
+.h-info-box li span{float:left;display: block;font-size:0.28rem;line-height:.6rem;}
 .h-info-box li div{float:right;}
 .e-info-box .upload-user-img span.m-card{display:block;width:0.46rem;height:0.38rem;background: url(../images/user-img.png) no-repeat;background-size:contain;}
 .e-info-box .upload-user-img .tx{width:0.6rem;height:0.5rem;}
@@ -778,7 +778,8 @@ border-left:1px #e5e5e5 solid;width:33.3%;}
 .upload-user-img{width:0.46rem;height:0.38rem;/*background: url(../images/user-img.png) no-repeat;background-size:contain;*/}
 .upload-user-img span{position: relative;}
 .upload-user-img span input{border:1px #ccc solid;position: absolute; width:0.46rem;height:0.38rem;opacity: 0;}
-.e-info-box input{width:4.5rem; text-align: right; border:none;outline:none;font-size:0.3rem;}
+.e-info-box input{width:4.5rem; text-align: right; border:none;outline:none;font-size:0.3rem;height:.4rem;line-height: .4rem;padding:0;
+margin-top:.1rem;}
 .e-info-box input[readonly],.cogray{color:gray;}
 .e-info-box .no-right-ico{background: none;padding-right:0.3rem;}
 .h-info-box a.no-ico{background:none;color:#E01A48;text-align: center;}
