--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -158,7 +158,7 @@ outline:none;height:0.8rem;line-height: 0.78rem;}
 .con-bottom span{display: inline-block;width:1.2rem;font-size:0.24rem;}
 .con-bottom .a-coll{width:0.6rem;}
 .a-coll i{font-size:0.34rem;}
-.readnums{}
+.readnums i{font-size:.24rem;vertical-align: top;margin-right:.05rem;}
 .con-bottom i{margin:0 0.1rem; color:#9ba4ad;vertical-align: -.03rem;font-size:0.32rem;}
 .con-bottom i.like{font-size:0.32rem;}
 .con-bottom i.collect{font-size:0.3rem;}
