--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -49,7 +49,7 @@ outline:none;height:0.8rem;line-height: 0.78rem;}
 .perli input{width:100%;border:none;border:1px #e5e5e5 solid;background: none;text-align: center;line-height: .58rem;font-size:.28rem;}
 .cart li a{background:#7a7d82; color:#fff;/*border-bottom:1px #fff solid;*/cursor: pointer;}
 .cart li:nth-of-type(3n) a{border-right: none;}
-.cart li:last-of-type a{border-right:1px #fff solid;}
+/*.cart li:last-of-type a{border-right:1px #fff solid;}*/
 .mark-items .cart{margin-top:-1px;border:none;max-height:0;-webkit-transition: max-height .1s ease;transition:max-height .1s ease;}
 .mark-items .shows,.b-mark li span.active{max-height:999px;-webkit-transition:max-height .6s .1s ease-in;transition:max-height .6s .1s ease-in;}
 /*.b-mark li span.active{-webkit-transition:max-height .3s ease-in;transition:max-height .3s ease-in;}*/
@@ -616,8 +616,9 @@ box-shadow: 0 10px 10px rgba(201,201,206,.5);min-height:3.72rem;background: #fff
 .worktab a{display: block;}
 .worktab li span{color:#171717;width:100%;}
 .worktab .worktime{display: block;line-height: .34rem;margin-left: 32%;width:60%;padding:.2rem 0;}
+.worktab .m_des{padding:0;color:#808080;}
 .gs-name{text-indent: 30%;}
-.h-tips{width:30%;}
+.h-tips{width:30%;color:#808080;}
 .h-tips i{color: #c490bf;}
 .linkinfo p{line-height: 0.46rem; }
 .linkinfo p span{/*width:1rem;*/}
