--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -771,7 +771,7 @@ border-left:1px #e5e5e5 solid;width:33.3%;}
 .upload-user-img .mcard{/*margin-top:.05rem;*/line-height: .75rem;}
 .mcard img{width:0.46rem;height:auto;}
 .h-info-box li span{float:left;display: block;font-size:0.28rem;line-height:.6rem;}
-.max_width li span{max-width:100%;max-height:.6rem;overflow:hidden;display: -webkit-box;-webkit-line-clamp: 1;-webkit-box-orient: vertical;}
+.max_width li span{max-width:100%;max-height:.6rem;display: -webkit-box;-webkit-line-clamp: 1;-webkit-box-orient: vertical;}
 .h-info-box li div{float:right;max-width:70%;overflow:hidden;}
 .e-info-box .upload-user-img span.m-card{display:block;width:0.46rem;height:0.38rem;background: url(../images/user-img.png) no-repeat;background-size:contain;}
 .e-info-box .upload-user-img .tx{width:0.6rem;height:0.5rem;}
