--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -744,7 +744,7 @@ border-left:1px #e5e5e5 solid;width:33.3%;}
 .m-commond-list p{padding-top:.26rem;padding-left: .6rem;}
 .m-commond-list p img{margin-right: .1rem;width: .42rem;height: .42rem;border-radius: 50%;}
 /*个人主页*/
-.h-info-box{background: #fff;border-top:1px #e5e5e5 solid;border-bottom:1px #e5e5e5 solid; padding:0 0.3rem; margin-top:0.2rem;}
+.h-info-box,.book-info-box{background: #fff;border-top:1px #e5e5e5 solid;border-bottom:1px #e5e5e5 solid; padding:0 0.3rem; margin-top:0.2rem;}
 .h-info-box a{color:#222c38;}
 .s-title-pass{padding:0;}
 .h-info-box li{line-height:0.4rem;border-bottom:1px #e5e5e5 solid;font-size:0.3rem;padding:.2rem 0;}
@@ -752,6 +752,7 @@ border-left:1px #e5e5e5 solid;width:33.3%;}
 .s-title-pass li{padding:0.25rem 0.3rem;}
 .s-title-pass li:last-of-type{border-bottom:none;}
 .h-info-box li h3{width:100%;overflow:hidden;font-size:.3rem;/*line-height: 0.38rem;*/}
+
 /*.h-info-box li b{float:left;}*/
 .s-title-pass li h3{color:#e01a48;}
 .s-title-pass li p{color:#9ba4ad; line-height: 0.36rem;}
@@ -772,7 +773,7 @@ border-left:1px #e5e5e5 solid;width:33.3%;}
 .mcard img{width:0.46rem;height:auto;}
 .h-info-box li span{float:left;display: block;font-size:0.28rem;line-height:.6rem;}
 .max_width li span{max-width:100%;max-height:.6rem;display: -webkit-box;-webkit-line-clamp: 1;-webkit-box-orient: vertical;}
-.h-info-box li div{float:right;max-width:70%;overflow:hidden;}
+.max_width li div{float:right;max-width:70%;overflow:hidden;}
 .e-info-box .upload-user-img span.m-card{display:block;width:0.46rem;height:0.38rem;background: url(../images/user-img.png) no-repeat;background-size:contain;}
 .e-info-box .upload-user-img .tx{width:0.6rem;height:0.5rem;}
 .tx img{width:1rem;height:1rem;border-radius: 0.5rem;overflow:hidden;}
@@ -1147,3 +1148,4 @@ background:-webkit-linear-gradient(top,#54d76a 0%,#53d66a 50%,#53d569 100%);  ba
 .mc_title h3{line-height: 40px;font-size:12px;margin:0;display: -webkit-box;-webkit-line-clamp: 1;-webkit-box-orient: vertical;overflow: hidden;color:#e5e5e5;padding:0 .1rem;}
 .loadout time{float:right;line-height: 40px;margin-right: 5px;color:lightgray;}
 .h-info-box li .e_img{line-height: 1rem;}
+.book-info-box li em{width:70%;}
